--- a/WebRoot/index.htm
+++ b/WebRoot/index.htm
@@ -43,6 +43,7 @@
     </script>
 </head>
 <body>
+	<a href="debug/redis-test.jsp" target="_blank">redis连接测试</a>
 	<a href="db/clear.jsp" target="_blank">清空数据库</a>
 	<p><a href="index-single.htm" target="_blank">打开单面板上传页面</a></p>
 	<p><a href="down3/index.htm" target="_blank">打开下载页面</a></p>
