下载逻辑优化，采用signSvr做标识，全局唯一

--- a/WebRoot/down3/index.htm
+++ b/WebRoot/down3/index.htm
@@ -39,7 +39,8 @@
                         var tdOp = tmp.find('td[name="op"]');
 
                         var f = item;                        
-                        var url = downer.Config["UrlDown"] + "?fid=" + f.idSvr;
+                        var url = downer.Config["UrlDown"] + "?fid=" + f.signSvr;
+                        jQuery.extend(f, { fileUrl: url });
 
                         if (f.fdTask ) { tdType.text("文件夹"); }
                         else { tdType.text("文件"); }
@@ -50,12 +51,12 @@
                             //文件夹
                             if (f.fdTask )
                             {
-                                var d = downer.add_folder(url, f, f.nameLoc);
+                                var d = downer.add_folder(f);
                                 if (d == null) return;//
                             }
                             else
                             {
-                                var d = downer.add_file(url, f.nameLoc);
+                                var d = downer.add_file( f);
                                 if (d == null) return;//
                                 d.ui.size.text(f.sizeSvr);
                                 d.ui.name.text(f.nameLoc);
