首页样式修改

--- a/WebRoot/index.htm
+++ b/WebRoot/index.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -44,7 +44,7 @@
 </head>
 <body>
 	<a href="debug/redis-test.jsp" target="_blank">redis连接测试</a>
-	<a href="db/clear.jsp" target="_blank">清空数据库和缓存</a>
+    <p><a href="db/clear.jsp" target="_blank">清空数据库和缓存</a></p>
 	<p><a href="index-single.htm" target="_blank">打开单面板上传页面</a></p>
 	<p><a href="down3/index.htm" target="_blank">打开下载页面</a></p>
     <p>
