--- a/WebRoot/down3/index.htm
+++ b/WebRoot/down3/index.htm
@@ -84,7 +84,7 @@
     <ul>
         <li><p><a target="_blank" href="../index.htm">打开上传页面</a></p></li>
         <li><p><a target="_blank" href="../db/clear.jsp">清空上传数据库</a></p></li>
-        <li><p><a target="_blank" href="db/clear.jsp">清空下载数据库</a></p></li>
+        <li><p><a target="_blank" href="db/clear.jsp">清空下载缓存</a></p></li>
     </ul>    
     <table id="tbCmp" cellpadding="0" cellspacing="0" border="1" class="files-svr">
         <tr id="tbHead">
