完善对edge的支持

--- a/WebRoot/index.htm
+++ b/WebRoot/index.htm
@@ -6,6 +6,8 @@
     <link href="js/up7.css" type="text/css" rel="Stylesheet"/>
     <script type="text/javascript" src="js/jquery-1.4.min.js"></script>
     <script type="text/javascript" src="js/json2.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/up7.app.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/up7.edge.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/up7.config.js" charset="utf-8" ></script>
     <script type="text/javascript" src="js/up7.file.js" charset="utf-8" ></script>
     <script type="text/javascript" src="js/up7.folder.js" charset="utf-8" ></script>    
